--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node --loader dotenv/config index.js",
+    "dev": "nodemon --loader dotenv/config index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "mongoose": "^8.2.1",
     "nodemon": "^3.1.0"
   }
 }
