feat: update route for req GET single book by :id in index.js

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node --loader dotenv/config index.js",
-    "dev": "nodemon --loader dotenv/config index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
