--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node --loader dotenv/config index.js",
-    "dev": "nodemon index.js"
+    "dev": "npx prettier . --write && nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +16,8 @@
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "prettier": "3.2.5"
   }
 }
